backend/auth/tests/functional/utils/errors/permission_granter.py
class PermissionGranterError:
    ACCESS_SUCCESS = ''
    ACCESS_ERROR = 'Доступ запрещен'
